# Common

./: CMakeLists.txt  README.md  example.cpp
include/common/: assert.hpp  bit_utils.hpp  logging.hpp  time_utils.hpp
include/lit/common/: assert.hpp  logging.hpp  time_utils.hpp
src/: logging.cpp  time_utils.cpp
src/common/: logging.cpp  time_utils.cpp
